src/test/ui/parser/pat-tuple-5.stderr
error: unexpected token: `)`
  --> $DIR/pat-tuple-5.rs:3:16
   |
LL |         (pat ..) => {}
   |                ^

error: aborting due to previous error

