src/test/ui/parser/pat-tuple-5.rs
fn main() {
    match 0 {
        (pat ..) => {} //~ ERROR unexpected token: `)`
    }
}
